# eog

./: amplifier.py  config.py  features.py  gtec.py  main.py  preprocessing.py  pyproject.toml  record_animation.py  recorder.py  utils.py
