[tool.poetry]
name = "emg"
version = "0.1.0"
description = ""
authors = ["bold <bold@cryptoguru.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"
numpy = "^1.16"
gTTS = "^2.0"
pydub = "^0.23.1"
fire = "^0.1.3"
scipy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
